--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
             <div class="profile">
                 <div class="profile-image wow bounceInUp">
-                    <img src="./img/Công Vũ.png.png" alt="">
+                    <img src="./img/cv.png" alt="">
                 </div>
                 <br>
                 <div class="profile-text wow bounceInUp">
@@ -131,7 +131,7 @@
             </div>
             <div class="porfolio-content">
                 <div class="portfolio-box wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="/img/Công Vũ.png.png" alt="">
+                    <img src="/img/cv.png" alt="">
                     <div class="portfolio-cover"></div>
                     <div class="portfolio-text">
                         <h3 class="title-text">San pham 1</h3>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box wow fadeInUp" data-wow-delay="0.6s">
-                    <img src="/img/Công Vũ.png.png" alt="">
+                    <img src="/img/cv.png" alt="">
                     <div class="portfolio-cover"></div>
                     <div class="portfolio-text">
                         <h3 class="title-text">San pham 1</h3>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box wow fadeInUp" data-wow-delay="0.7s">
-                    <img src="/img/Công Vũ.png.png" alt="">
+                    <img src="/img/cv.png" alt="">
                     <div class="portfolio-cover"></div>
                     <div class="portfolio-text">
                         <h3 class="title-text">San pham 1</h3>
@@ -163,7 +163,7 @@
             </div>
             <div class="porfolio-content">
                 <div class="portfolio-box wow fadeInUp" data-wow-delay="0.5s">
-                    <img src="/img/Công Vũ.png.png" alt="">
+                    <img src="/img/cv.png" alt="">
                     <div class="portfolio-cover"></div>
                     <div class="portfolio-text">
                         <h3 class="title-text">San pham 1</h3>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box wow fadeInUp" data-wow-delay="0.6s">
-                    <img src="/img/Công Vũ.png.png" alt="">
+                    <img src="/img/cv.png" alt="">
                     <div class="portfolio-cover"></div>
                     <div class="portfolio-text">
                         <h3 class="title-text">San pham 1</h3>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box wow fadeInUp" data-wow-delay="0.7s">
-                    <img src="/img/Công Vũ.png.png" alt="">
+                    <img src="/img/cv.png" alt="">
                     <div class="portfolio-cover"></div>
                     <div class="portfolio-text">
                         <h3 class="title-text">San pham 1</h3>
